syntax = "proto3";
import "google/protobuf/empty.proto";
package freight;

service FreightParser{
  rpc get_best_freight(freight_request) returns (freight_response_list);
}

enum City{
  SHANGHAI = 0;
}
enum containerSize{
  TWENTY_STANDARD = 0;
  FORTY_STANDARD = 1;
  FORTY_HIGH_CUBE = 2;
  FORTY_FIVE_HIGH_CUBE = 3;

}
enum ShippingLine{
  SKLU = 0;
}
message freight_request{
  City from_city = 1;
  City to_city = 2;
  containerSize container_size = 3;
}
message Contact{
  string url = 1;
  string phone_number = 2;
  string agent_name = 3;
}
message freight_response{
  City from_city = 1;
  City to_city = 2;
  containerSize container_size = 3;
  int64 usd_price = 4;
  ShippingLine line = 6;
  Contact contacts = 7;
}

message freight_response_list{
  repeated freight_response multi_response = 1;
}